# itm-schema

./: README.md  pyproject.toml  setup.py
demo/scenarios/ADEPT1/: anchors.yaml  scenario.yaml
demo/scenarios/data-collect-scenario-1/: scenario.yaml
demo/scenarios/data-collect-scenario-2/: scenario.yaml
demo/scenarios/data-collect-scenario-3/: scenario.yaml
scripts/: test_runner.py
src/itm_schema/: base_model.py  demographics.py  internal_pydantic_schema.py  kdma_ids.py  ml_pipeline.py  model.py  placeholders.py  pydantic_schema.py  stats_pydantic_schema.py
src/ta3_schema/: __init__.py  action.py  action_mapping.py  action_type_enum.py  aid.py  aid_delay.py  aid_type_enum.py  air_quality_enum.py  alignment_results.py  alignment_source.py  alignment_target.py  avpu_level_enum.py  blood_oxygen_enum.py  breathing_level_enum.py  character.py  character_tag_enum.py  communication_capability_enum.py  conditions.py  conditions_character_vitals_inner.py  decision_environment.py  demographic_sex_enum.py  demographics.py  directness_enum.py  entity_type_enum.py  environment.py  event.py  event_type_enum.py  heart_rate_enum.py  injury.py  injury_location_enum.py  injury_severity_enum.py  injury_status_enum.py  injury_trigger_enum.py  intent_enum.py  kdma_value.py  mental_status_enum.py  message_type_enum.py  meta_info.py  military_disposition_enum.py  military_rank_enum.py  (+28 more)
ta3/: README.md  current_schema.yaml  update_ta3_schema.sh
test/itm_schema_tests/: test_load_scenario.py  test_local_mongo.py  test_utils.py
tests/: test_load_scenario.py
(+87 files in other folders)
